[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midvoxio"
version = "0.1.4"
authors = [
  { name="Midstream", email="midstream.lou@gmail.com" },
]
description = "A python io to load/write/visualize vox files (MagicalVoxel's .vox format)."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/midstreeeam/MidVoxIO"
"Bug Tracker" = "https://github.com/midstreeeam/MidVoxIO/issues"
